Update image paths to relative URLs in index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
       <div class="img-slider">
 
-        <img class="slide" src="/assets/photo_2025-02-23_18-09-45.jpg" alt="">
-        <img class="slide" src="/assets/1000_F_943203333_M0fvXU6j1La39HljqV5s3fFegyjEfzZj.jpg" alt="">
-        <img class="slide" src="/assets/photo_4_2025-02-23_18-10-21.jpg" alt="">
-        <img class="slide" src="/assets/photo_8_2025-02-23_18-10-21.jpg" alt="">
+        <img class="slide" src="./assets/photo_2025-02-23_18-09-45.jpg" alt="">
+        <img class="slide" src="./assets/1000_F_943203333_M0fvXU6j1La39HljqV5s3fFegyjEfzZj.jpg" alt="">
+        <img class="slide" src="./assets/photo_4_2025-02-23_18-10-21.jpg" alt="">
+        <img class="slide" src="./assets/photo_8_2025-02-23_18-10-21.jpg" alt="">
 
       </div>
 
